--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
 </div>
 
 <!-- Body -->
+<h1>Header1</h1>
+
+<p>
+This is where the content will go.
+</p>
+
+<h2>Header2</h2>
+
+<p>
+This is where the content will go.
+</p>
+
+<h3>Header3</h3>
+
+<p>
+This is where the content will go.
+</p>
+
+<h4>Header4</h4>
+
 <p>
 This is where the content will go.
 </p>
