--- a/index.html
+++ b/index.html
@@ -4,42 +4,63 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="favicon.png" type="image/png" />
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
-    <title>Test Site</title>
+    <link rel="icon" href="favicon.svg" type="image/svg" />
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg" />
+    <title>Personal Computer World magazine index</title>
 </head>
 <body>
 
 <!-- Header -->
 <div class="captiondiv">
-<h1 id="top" class="title">Test Site</h1>
-<h2 class="subtitle">Preparing for PCW Database</h2>
+<h1 id="top" class="title">Personal Computer World magazine index</h1>
+<h2 class="subtitle">Home</h2>
 </div>
 
 <!-- Body -->
-<h1>Header1</h1>
-
 <p>
-This is where the content will go.
+The purpose of this site is to provide indexes into every 20th Century
+issue of Personal Computer World magazine. The Adverts index covers only
+“notable” advertisements. All other indexes are intended to be
+comprehensive.
 </p>
 
-<h2>Header2</h2>
-
 <p>
-This is where the content will go.
+These indexes are a <i>work in progress</i>. They are also
+<i>incomplete</i>. This is because I do not have PDF or physical copies
+of many of the 20th Century issues. If you can provide a PDF or physical
+copy of any of these <a href="missing-issues.html">missing issues</a> I
+will index them and add the data to this site. If you want the database
+that contains all the data used (in SQLite format), providing it is for
+personal or academic (not-for-profit non-commercial) use, I will supply
+it. Contact me as m.n.summerfield at gmail.com.
 </p>
 
-<h3>Header3</h3>
 
-<p>
-This is where the content will go.
-</p>
-
-<h4>Header4</h4>
-
-<p>
-This is where the content will go.
-</p>
+<div class="clearfix">
+<a href="pcw-1978-02.html">
+<img class="home_image" src="images/pcw-1978-02.jpg" alt="PCW 1978-02"/></a>
+The indexes are:
+<ul>
+<li><a href="magazines.html">Magazines</a> — lists every 20th Century
+issue.</li>
+<li><a href="items.html">Articles</a> — lists every significant
+article.</li>
+<li><a href="writers.html">Writers</a> — lists the name of every
+credited writer.</li>
+<li><a href="code-listings.html">Code Listings</a> — lists every program
+or routine, and the language it is written in.</li>
+<li><a href="computers.html">Computers</a> — lists every computer
+reviewed (and also important adverts for some computers).</li>
+<li><a href="adverts.html">Adverts</a> — lists “notable” adverts.</li>
+<li><a href="missing-issues.html">missing issues</a> — none of these are
+indexed.</li>
+</ul>
+Every magazine in the magazine index contains links to the articles,
+code listings, computers, and adverts that appeared in it.
+<br>
+The indexes for writers, code listings, computers, and adverts, all
+contain links back to the magazines they appeared in.
+</div>
 
 <!-- Footer -->
 <hr>
