--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="favicon.svg" type="image/svg" />
     <link rel="shortcut icon" href="favicon.svg" type="image/svg" />
-    <title>Personal Computer World magazine index</title>
+    <title>Personal Computer World magazine index (test site)</title>
 </head>
 <body>
 
 <!-- Header -->
 <div class="captiondiv">
-<h1 id="top" class="title">Personal Computer World magazine index</h1>
+<h1 id="top" class="title">Personal Computer World magazine index (test
+site)</h1>
 <h2 class="subtitle">Home</h2>
 </div>
 
 <!-- Body -->
+
+<p style="color: red;">
+This is purely a <i>test site</i>.
+The real site is
+<a href="https://mark-summerfield.github.io/pcw/index.html">Personal
+Computer World magazine index</a>.
+</p>
+
 <p>
 The purpose of this site is to provide indexes into every 20th Century
 issue of Personal Computer World magazine. The Adverts index covers only
