--- a/pcw-1978-02.html
+++ b/pcw-1978-02.html
@@ -13,7 +13,7 @@
 <!-- Header -->
 <div class="captiondiv">
 <h1 id="top" class="title">Personal Computer World magazine index</h1>
-<h2 class="subtitle">Magazine PCW-1978-02</h2>
+<h2 class="subtitle">PCW-1978-02 [Magazine]</h2>
 </div>
 
 <p><a href="index.html">Home</a> » <a href="magazines.html">Magazines</a></p>
