--- a/magazines.html
+++ b/magazines.html
@@ -19,6 +19,9 @@
 <p><a href="index.html">Home</a></p>
 
 <!-- Body -->
+<div class="clearfix">
+<a href="pcw-1978-07.html">
+<img class="home_image" src="images/pcw-1978-07.jpg" alt="pcw-1978-07"/></a>
 <table>
 <tr><th>Magazine</th><th>Vol#Num</th><th>Pages</th></tr>
 <tr>
@@ -38,7 +41,7 @@
 <td style="text-align: center;">1#4</td>
 <td style="text-align: right;">62</td>
 </tr></table>
-<!-- Footer -->
+</div><!-- Footer -->
 <hr>
 <p class="copyright">Copyright © Mark Summerfield <span
 id="year">2024</span>. All&nbsp;Rights&nbsp;Reserved.
