--- a/magazines.html
+++ b/magazines.html
@@ -41,7 +41,8 @@
 <td style="text-align: center;">1#4</td>
 <td style="text-align: right;">62</td>
 </tr></table>
-</div><!-- Footer -->
+</div>
+<!-- Footer -->
 <hr>
 <p class="copyright">Copyright © Mark Summerfield <span
 id="year">2024</span>. All&nbsp;Rights&nbsp;Reserved.
