--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@ Computer World magazine index</a>.
 
 <p>
 The purpose of this site is to provide indexes into every 20th Century
-issue of Personal Computer World magazine. The Adverts index covers only
-“notable” advertisements. All other indexes are intended to be
-comprehensive.
+issue of Personal Computer World magazine.
 </p>
 
 <p>
@@ -60,7 +58,6 @@ credited writer.</li>
 or routine, and the language it is written in.</li>
 <li><a href="computers.html">Computers</a> — lists every computer
 reviewed (and also important adverts for some computers).</li>
-<li><a href="adverts.html">Adverts</a> — lists “notable” adverts.</li>
 <li><a href="missing-issues.html">missing issues</a> — none of these are
 indexed.</li>
 </ul>
