--- a/pcw-1978-05.html
+++ b/pcw-1978-05.html
@@ -23,6 +23,17 @@
 <img class="home_image" src="images/pcw-1978-05.jpg" alt="pcw-1978-05"/>
 <p>
 <a href="pcw-1978-02.html">Previous</a> « <a href="https://www.worldradiohistory.com/UK/Personal-Computer-World/70s/Personal-Computer-World-Vol.1-No.2-S-OCR.pdf">Online PDF</a> » <a href="pcw-1978-07.html">Next</a> </p>
+<table>
+<tr><th>Item</th><th>Page</th><th>Info.</th></tr>
+<tr>
+<td style="vertical-align: top;">Power to the People</td>
+<td style="vertical-align: top; text-align: right;">8</td>
+<td style="vertical-align: top;"><i>Article</i></td>
+</tr><tr>
+<td style="vertical-align: top;">A Mighty Micromite The MK14</td>
+<td style="vertical-align: top; text-align: right;">10</td>
+<td style="vertical-align: top;"><i>Hardware Review</i><br>Assember SC/MP</td>
+</tr></table>
 </div>
 <!-- Footer -->
 <hr>
