--- a/pcw-1978-07.html
+++ b/pcw-1978-07.html
@@ -23,7 +23,9 @@
 <img class="home_image" src="images/pcw-1978-07.jpg" alt="pcw-1978-07"/>
 <p>
 <a href="pcw-1978-05.html">Previous</a> « <a href="https://www.worldradiohistory.com/UK/Personal-Computer-World/70s/Personal-Computer-World-Vol.1-No.3-S-OCR.pdf">Online PDF</a> » <a href="pcw-1978-08.html">Next</a> </p>
-This is the first monthly issue.</div>
+<p>
+This is the first monthly issue.</p>
+</div>
 <!-- Footer -->
 <hr>
 <p class="copyright">Copyright © Mark Summerfield <span
