--- a/pcw-1978-02.html
+++ b/pcw-1978-02.html
@@ -23,7 +23,24 @@
 <img class="home_image" src="images/pcw-1978-02.jpg" alt="pcw-1978-02"/>
 <p>
 <a href="https://www.worldradiohistory.com/UK/Personal-Computer-World/70s/Personal-Computer-World-Vol.1-No.1-S-OCR.pdf">Online PDF</a> » <a href="pcw-1978-05.html">Next</a> </p>
-This first issue is undated but came out in February 1978.</div>
+<p>
+This first issue is undated but came out in February 1978.</p>
+<table>
+<tr><th>Item</th><th>Page</th><th>Info.</th></tr>
+<tr>
+<td style="vertical-align: top;">Science of Cambridge/MK14 Microprocessor Kit</td>
+<td style="vertical-align: top; text-align: right;">8</td>
+<td style="vertical-align: top;"><i>Advert</i><br>Assember SC/MP</td>
+</tr><tr>
+<td style="vertical-align: top;">The Searcher</td>
+<td style="vertical-align: top; text-align: right;">8</td>
+<td style="vertical-align: top;"><i>Code Listing</i><br>Assember 6800</td>
+</tr><tr>
+<td style="vertical-align: top;">Personal Power is Here</td>
+<td style="vertical-align: top; text-align: right;">12</td>
+<td style="vertical-align: top;"><i>Article</i></td>
+</tr></table>
+</div>
 <!-- Footer -->
 <hr>
 <p class="copyright">Copyright © Mark Summerfield <span
