--- a/pcw-1978-02.html
+++ b/pcw-1978-02.html
@@ -26,19 +26,19 @@
 <p>
 This first issue is undated but came out in February 1978.</p>
 <table>
-<tr><th>Item</th><th>Page</th><th>Info.</th></tr>
+<tr><th>Item</th><th>Info.</th><th>Page</th></tr>
 <tr>
 <td style="vertical-align: top;">Science of Cambridge/MK14 Microprocessor Kit</td>
+<td style="vertical-align: top;">Advert<br><i>Assember SC/MP</i><br><a href="computer-1.html">Science of Cambridge/MK14</a></td>
 <td style="vertical-align: top; text-align: right;">8</td>
-<td style="vertical-align: top;"><i>Advert</i><br>Assember SC/MP</td>
 </tr><tr>
 <td style="vertical-align: top;">The Searcher</td>
+<td style="vertical-align: top;">Code Listing<br><i>Assember 6800</i></td>
 <td style="vertical-align: top; text-align: right;">8</td>
-<td style="vertical-align: top;"><i>Code Listing</i><br>Assember 6800</td>
 </tr><tr>
-<td style="vertical-align: top;">Personal Power is Here</td>
+<td style="vertical-align: top;">Personal Power is Here<br><i>J. H. Miller-Kirkpatrick</i></td>
+<td style="vertical-align: top;">Article</td>
 <td style="vertical-align: top; text-align: right;">12</td>
-<td style="vertical-align: top;"><i>Article</i></td>
 </tr></table>
 </div>
 <!-- Footer -->
