--- a/pcw-1978-05.html
+++ b/pcw-1978-05.html
@@ -24,15 +24,15 @@
 <p>
 <a href="pcw-1978-02.html">Previous</a> « <a href="https://www.worldradiohistory.com/UK/Personal-Computer-World/70s/Personal-Computer-World-Vol.1-No.2-S-OCR.pdf">Online PDF</a> » <a href="pcw-1978-07.html">Next</a> </p>
 <table>
-<tr><th>Item</th><th>Page</th><th>Info.</th></tr>
+<tr><th>Item</th><th>Info.</th><th>Page</th></tr>
 <tr>
-<td style="vertical-align: top;">Power to the People</td>
+<td style="vertical-align: top;">Power to the People<br><i>W. V. Ringer</i></td>
+<td style="vertical-align: top;">Article</td>
 <td style="vertical-align: top; text-align: right;">8</td>
-<td style="vertical-align: top;"><i>Article</i></td>
 </tr><tr>
-<td style="vertical-align: top;">A Mighty Micromite The MK14</td>
+<td style="vertical-align: top;">A Mighty Micromite The MK14<br><i>Nick Toop</i></td>
+<td style="vertical-align: top;">Hardware Review<br><i>Assember SC/MP</i><br><a href="computer-1.html">Science of Cambridge/MK14</a></td>
 <td style="vertical-align: top; text-align: right;">10</td>
-<td style="vertical-align: top;"><i>Hardware Review</i><br>Assember SC/MP</td>
 </tr></table>
 </div>
 <!-- Footer -->
