--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ The indexes are:
 <ul>
 <li><a href="magazines.html">Magazines</a> — lists every 20th Century
 issue.</li>
-<li><a href="items.html">Articles</a> — lists every significant
-article.</li>
+<li><a href="items.html">Items</a> — lists every significant
+item.</li>
 <li><a href="writers.html">Writers</a> — lists the name of every
 credited writer.</li>
 <li><a href="code-listings.html">Code Listings</a> — lists every program
