--- a/items.html
+++ b/items.html
@@ -30,7 +30,7 @@
 <td style="vertical-align: top; text-align: right;">10</td>
 <td style="vertical-align: top;">Hardware Review</td>
 <td style="vertical-align: top;">Assember SC/MP</td>
-<td style="vertical-align: top;"><a href="computer-1.html">Science of Cambridge/MK14</a></td>
+<td style="vertical-align: top;">Science of Cambridge/MK14</td>
 <td style="vertical-align: top;"></td>
 </tr><tr>
 <td style="vertical-align: top;">Personal Power is Here</td>
@@ -66,7 +66,7 @@
 <td style="vertical-align: top; text-align: right;">8</td>
 <td style="vertical-align: top;">Advert</td>
 <td style="vertical-align: top;">Assember SC/MP</td>
-<td style="vertical-align: top;"><a href="computer-1.html">Science of Cambridge/MK14</a></td>
+<td style="vertical-align: top;">Science of Cambridge/MK14</td>
 <td style="vertical-align: top;"></td>
 </tr></table>
 <!-- Footer -->
