--- a/pcw-1978-02.html
+++ b/pcw-1978-02.html
@@ -29,7 +29,7 @@ This first issue is undated but came out in February 1978.</p>
 <tr><th>Item</th><th>Info.</th><th>Page</th></tr>
 <tr>
 <td style="vertical-align: top;">Science of Cambridge/MK14 Microprocessor Kit</td>
-<td style="vertical-align: top;">Advert<br><i>Assember SC/MP</i><br><a href="computer-1.html">Science of Cambridge/MK14</a></td>
+<td style="vertical-align: top;">Advert<br><i>Assember SC/MP</i><br>Science of Cambridge/MK14</td>
 <td style="vertical-align: top; text-align: right;">8</td>
 </tr><tr>
 <td style="vertical-align: top;">The Searcher</td>
