--- a/pcw-1978-05.html
+++ b/pcw-1978-05.html
@@ -31,7 +31,7 @@
 <td style="vertical-align: top; text-align: right;">8</td>
 </tr><tr>
 <td style="vertical-align: top;">A Mighty Micromite The MK14<br><i>Nick Toop</i></td>
-<td style="vertical-align: top;">Hardware Review<br><i>Assember SC/MP</i><br><a href="computer-1.html">Science of Cambridge/MK14</a></td>
+<td style="vertical-align: top;">Hardware Review<br><i>Assember SC/MP</i><br>Science of Cambridge/MK14</td>
 <td style="vertical-align: top; text-align: right;">10</td>
 </tr></table>
 </div>
