--- a/magazines.html
+++ b/magazines.html
@@ -20,8 +20,10 @@
 
 <!-- Body -->
 <div class="clearfix">
+<span id="coverimage">
 <a href="pcw-1978-07.html">
 <img class="home_image" src="images/pcw-1978-07.jpg" alt="pcw-1978-07"/></a>
+</span>
 <table>
 <tr><th>Magazine</th><th>Vol#Num</th><th>Pages</th></tr>
 <tr>
