--- a/missing-issues.html
+++ b/missing-issues.html
@@ -29,8 +29,10 @@ use, I will supply it. Contact me as m.n.summerfield at gmail.com.
 </p>
 
 <div class="clearfix">
+<span id="coverimage">
 <a href="pcw-1978-05.html">
 <img class="home_image" src="images/pcw-1978-05.jpg" alt="PCW 1978-05"/></a>
+</span>
 <table>
 <tr><th>Year</th><th>Missing Issues</th></tr>
 <tr><td>1986</td><td>&nbsp;Jan</td></tr>
@@ -59,6 +61,10 @@ id="year">2024</span>. All&nbsp;Rights&nbsp;Reserved.
 <script src="Year.js"></script>
 <script>
 Year();
+</script>
+<script src="Cover.js"></script>
+<script>
+UpdateCover("coverimage");
 </script>
 </body>
 </html>
