--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ it. Contact me as m.n.summerfield at gmail.com.
 
 
 <div class="clearfix">
+<span id="coverimage">
 <a href="pcw-1978-02.html">
 <img class="home_image" src="images/pcw-1978-02.jpg" alt="PCW 1978-02"/></a>
+</span>
 The indexes are:
 <ul>
 <li><a href="magazines.html">Magazines</a> — lists every 20th Century
@@ -72,6 +74,10 @@ id="year">2024</span>. All&nbsp;Rights&nbsp;Reserved.
 <script src="Year.js"></script>
 <script>
 Year();
+</script>
+<script src="Cover.js"></script>
+<script>
+UpdateCover("coverimage");
 </script>
 </body>
 </html>
