--- a/magazines.html
+++ b/magazines.html
@@ -54,5 +54,9 @@ id="year">2024</span>. All&nbsp;Rights&nbsp;Reserved.
 <script>
 Year();
 </script>
+<script src="Cover.js"></script>
+<script>
+UpdateCover("coverimage");
+</script>
 </body>
 </html>
