--- a/items.html
+++ b/items.html
@@ -18,7 +18,7 @@
 </div>
 
 <!-- Body -->
-<table>
+<p><a href="index.html">Home</a></p><table>
 <tr><th>Title</th><th>Writer(s)</th><th>Magazine</th><th>Page</th>
 <th>Group(s)</th><th>Language(s)</th><th>Computer(s)</th>
 <th>Notes</th></tr>
