--- a/writers.html
+++ b/writers.html
@@ -18,7 +18,7 @@
 </div>
 
 <!-- Body -->
-<table>
+<p><a href="index.html">Home</a></p><table>
 <tr><th>Writer</th><th>Title</th><th>Magazine</th><th>Page</th>
 <th>Notes</th></tr>
 <tr>
