--- a/computers.html
+++ b/computers.html
@@ -24,15 +24,9 @@
 <th>Model</th>
 <th>CPU</th>
 <th>Mhz</th>
-<th style="vertical-align: top;">RAM (KB)</th>
-<th style="vertical-align: top;">ROM (KB)</th>
-<th style="vertical-align: top;">Width<br>(px)</th>
-<th style="vertical-align: top;">Height<br>(px)</th>
-<th style="vertical-align: top;">Width<br>(chars)</th>
-<th style="vertical-align: top;">Height<br>(chars)</th>
-<th>Colors</th>
-<th>Floppys</th>
-<th style="vertical-align: top;">Disk (KB)</th>
+<th>RAM (KB)</th>
+<th>Screen</th>
+<th>Storage</th>
 <th>Price</th>
 <th>Magazine(s)</th>
 <th>Notes</th>
@@ -40,20 +34,14 @@
 <tr>
 <td style="vertical-align: top;">Science of Cambridge</td>
 <td style="vertical-align: top;">MK14</td>
-<td style="vertical-align: top; text-align: right;;">SC/MP</td>
-<td style="vertical-align: top; text-align: right;;">4.0</td>
-<td style="vertical-align: top; text-align: right;;">0.25</td>
-<td style="vertical-align: top; text-align: right;;">0.5</td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;"></td>
-<td style="vertical-align: top; text-align: right;;">£39.95</td>
+<td style="vertical-align: top; text-align: right;">SC/MP</td>
+<td style="vertical-align: top; text-align: right;">4.0</td>
+<td style="vertical-align: top; text-align: right;">0.25</td>
+<td style="vertical-align: top;">8 digit LED</td>
+<td style="vertical-align: top;">Room for more RAM, but no storage</td>
+<td style="vertical-align: top; text-align: right;">£39.95</td>
 <td style="vertical-align: top;"><a href="pcw-1978-02.html">PCW-1978-02</a> pg.&nbsp;8, <a href="pcw-1978-05.html">PCW-1978-05</a> pg.&nbsp;10</td>
-<td style="vertical-align: top;">Self assembly kit with hex keypad and 8 digit LED display.</td>
+<td style="vertical-align: top;">Self assembly kit with hex keypad.</td>
 </tr></table>
 <!-- Footer -->
 <hr>
